update twitter links

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
                 <div class="grid_4">
                     <h2>Questions</h2>
                     <ul>
-                        <li><strong style="color:red">NEW!</strong> <a href="https://mobile.twitter.com/search?q=%23q1&s=typd">#Q1: Shall Thales favor Open Source Software VS Commercial of the Shelf?</a></li>
+                        <li><strong style="color:red">NEW!</strong> <a href="https://mobile.twitter.com/search?q=%23q1%20%23thalesgisday&s=typd">#Q1: Shall Thales favor Open Source Software VS Commercial of the Shelf?</a></li>
                     </ul>
                     <h2>Quick Links</h2>
                     <ul>
-                        <li><a href="https://mobile.twitter.com/search?q=%23thalesgisday&s=typd">Answer today's question</a></li>
+                        <li><a href="https://mobile.twitter.com/search?q=%23q1%20%23thalesgisday&s=typd">Answer today's question</a></li>
                         <li>Thematic map : (Tweets + Sentiments) - available on Nov 19th</li>
                         <li><a href="mailto:Dominique.PERRON@ca.thalesgroup.com?subject=Question for GIS Day event">Submit a question for sentiment analysis</a></li>
                     </ul>
