--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
                 <div class="grid_4">
                     <h2>Questions</h2>
                     <ul>
-                        <li><strong style="color:red">NEW!</strong> <a href="https://mobile.twitter.com/search?q=%23q1%20%23thalesgisday&s=typd">#Q1: Shall Thales favor Open Source Software VS Commercial of the Shelf?</a></li>
+                        <li><a href="https://mobile.twitter.com/search?q=%23q1%20%23thalesgisday&s=typd">#Q1: Shall Thales favor Open Source Software VS Commercial of the Shelf?</a></li>
+                    </ul>
+					<ul>
+                        <li><strong style="color:red">NEW!</strong> <a href="https://mobile.twitter.com/search?q=%23q1%20%23thalesgisday&s=typd">#Q2: </a></li>
                     </ul>
                     <h2>Quick Links</h2>
                     <ul>
@@ -87,6 +90,9 @@
                     <br />                    
                     <br />
                     <a href="http://www.mediamiser.com/"><img src="graphics/mediamiser.png" alt="MediaMiser" style="width:200px" /></a>
+                    <br />
+					<br />
+                    <a href="http://www.nrc-cnrc.gc.ca/index.html/"><img src="graphics/NRC.png" alt="MediaMiser" style="width:200px" /></a>
                     <br />
                     <br />                    
                     <a href="http://hadoop.apache.org/"><img src="graphics/Hadoop.jpg" alt="Hadoop" style="width:150px" /></a>
