--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
                         <li><a href="https://mobile.twitter.com/search?q=%23q1%20%23thalesgisday&s=typd">#Q1: Shall Thales favor Open Source Software VS Commercial of the Shelf?</a></li>
                     </ul>
 					<ul>
-                        <li><strong style="color:red">NEW!</strong> <a href="https://mobile.twitter.com/search?q=%23q2%20%23thalesgisday&s=typd">#Q2: What is your default Thales browser and what do you think it should be?</a></li>
+                        <li><a href="https://mobile.twitter.com/search?q=%23q2%20%23thalesgisday&s=typd">#Q2: What is your default Thales browser and what do you think it should be?</a></li>
+                    </ul>
+					<ul>
+                        <li><strong style="color:red">NEW!</strong> <a href="https://mobile.twitter.com/search?q=%23q3%20%23thalesgisday&s=typd">#Q3: Android vs. IPhone: what do you prefer and why?</a></li>
                     </ul>
                     <h2>Quick Links</h2>
                     <ul>
