--- a/index.html
+++ b/index.html
@@ -82,9 +82,12 @@
 					<ul>
                         <li><strong style="color:red">NEW!</strong> <a href="https://mobile.twitter.com/search?q=%23q3%20%23thalesgisday&s=typd">#Q3: Android vs. IPhone: what do you prefer and why?</a></li>
                     </ul>
+					<ul>
+                        <li><a href="https://mobile.twitter.com/search?q=%23q4%20%23thalesgisday&s=typd">#Q4: Where are you this week-end?  Post a photo or a video!</a></li>
+                    </ul>
                     <h2>Quick Links</h2>
                     <ul>
-                        <li><a href="https://mobile.twitter.com/search?q=%23q3%20%23thalesgisday&s=typd">Answer today's question</a></li>
+                        <li><a href="https://mobile.twitter.com/search?q=%23q4%20%23thalesgisday&s=typd">Answer today's question</a></li>
                         <li>Thematic map : (Tweets + Sentiments) - available on Nov 19th</li>
                         <li><a href="mailto:Dominique.PERRON@ca.thalesgroup.com?subject=Question for GIS Day event">Submit a question for sentiment analysis</a></li>
                     </ul>
