--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
                         <li><a href="https://mobile.twitter.com/search?q=%23q3%20%23thalesgisday&s=typd">#Q3: Android vs. IPhone: what do you prefer and why?</a></li>
                     </ul>
 					<ul>
-                        <li><<a href="https://mobile.twitter.com/search?q=%23q4%20%23thalesgisday&s=typd">#Q4: Where are you this week-end?  Post a photo or a video!</a></li>
+                        <li><a href="https://mobile.twitter.com/search?q=%23q4%20%23thalesgisday&s=typd">#Q: Where are you this week-end?  Post a photo or a video!</a></li>
                     </ul>
 					<ul>
-                        <li><strong style="color:red">NEW!</strong> <a href="https://mobile.twitter.com/search?q=%23q5%20%23thalesgisday&s=typd">#Q4: Do you plan to work on GIS technologies this week? </a></li>
+                        <li><strong style="color:red">NEW!</strong> <a href="https://mobile.twitter.com/search?q=%23q5%20%23thalesgisday&s=typd">#Q5: Do you plan to work on GIS technologies this week? </a></li>
                     </ul>
                     <h2>Quick Links</h2>
                     <ul>
